--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
+<div  style="text-align: center; ">
 <h3>
   Добро пожаловать!
 </h3>
@@ -11,3 +12,4 @@
 <button>
   <%= link_to 'Регистрация', '/users' %>
 </button>
+</div>
