--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,18 +1,20 @@
+<div  style="text-align: center; ">
 <h3>
-  Товары
+  Меню
 </h3>
 
 <br/>
 
 <button>
-  <%= link_to 'Все анекдоты', '/main/anecdotes' %>
+  <%= link_to 'Все товары', '/main/anecdotes' %>
 </button>
 
 <button>
-  <%= link_to 'Избранное', '/favourite' %>
+  <%= link_to 'Корзина', '/bag' %>
 </button>
 
 <br/>
 <br/>
 
 <%= link_to 'Выйти', '/' %>
+</div>
