Список товаров. Main - ненужный рудимент

--- a/app/views/auth/index.html.erb
+++ b/app/views/auth/index.html.erb
@@ -4,7 +4,7 @@
 
 
 <h3><b>
-  Регистрация
+  Вход
 </b></h3>
 
 <br/>
@@ -30,7 +30,7 @@
   <div>
   <%= link_to 'Назад', '/' %>
 <button>
-  <%= link_to 'Войти', '/main' %>
+  <%= link_to 'Войти', '/products' %>
 </button>
   </div>
 </div>
