После регистрации надо войти

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -28,7 +28,7 @@
   <div style="">
   <%= link_to 'Назад', '/' %>
 <button>
-  <%= link_to 'Зарегистрироваться', '/products' %>
+  <%= link_to 'Зарегистрироваться', '/auth' %>
 </button>
   </div>
 </div>
